<resources>
    <string name="app_name">BabyFoot Connecté</string>
    <string name="button_match_list">Historique</string>
    <string name="reset">stop</string>
    <string name="start">start</string>
    <string name="waiting">en attente d\'un match...</string>
    <string name="delete_history">supprimer l\'historique</string>
    <string name="add">Nouveau Tournoi</string>
    <string name="join">Rejoindre Tournoi</string>
    <string name="tournoi">tournoi</string>
    <string name="discover">choisir module</string>
    <string name="scan">scan</string>
    <string name="paired_devices">Périphériques connus</string>
</resources>
